[tool.poetry]
name = "artscraper"
version = "0.1.0"
description = "Danish Article Scraper"
authors = ["EmilLaursen <emil.ostergaard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
