[tool.poetry]
name = "artscraper"
version = "0.1.0"
description = ""
authors = ["EmilLaursen <emil.ostergaard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Scrapy = "^1.8.0"
prometheus_client = "^0.7.1"
flask = "^1.1.1"
flask_restful = "^0.3.7"
psutil = "^5.6.7"
bloom_filter = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
