[tool.poetry]
name = "artscraper"
version = "0.1.0"
description = ""
authors = ["EmilLaursen <emil.ostergaard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.47.1"
uvicorn = "^0.11.2"
Scrapy = "^1.8.2"
bloom_filter = "^1.3"
prometheus_client = "^0.7.1"
botocore = "^1.14.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


